cmake_minimum_required(VERSION 3.19)
project(disneyplus)
include(ExternalProject)

set(CMAKE_CXX_STANDARD 14)
set(SDL2_INCLUDE_DIR SDL2-2.0.14)
set(SDL2_PATH SDL2-2.0.14/)
set(SDL2_LIBRARY lib/)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
set(JSON_BuildTests OFF CACHE INTERNAL "")
add_compile_definitions(LOAD_JPG)
add_subdirectory(${PROJECT_SOURCE_DIR}/json)
add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2-2.0.14/)
add_subdirectory(${PROJECT_SOURCE_DIR}/SDL2_ttf-2.0.15/)
add_subdirectory(${PROJECT_SOURCE_DIR}/curl-7.76.1)
include_directories(SDL2-2.0.14/include json/single_include/nlohmann include SDL2_ttf-2.0.15/)

add_executable(disneyplus main.cpp include/stb_image.h src/DisneyImage.cpp src/DisneyCurl.cpp src/DisneySet.cpp include/DisneySet.h)

target_link_libraries(disneyplus PRIVATE nlohmann_json::nlohmann_json SDL2 libcurl SDL2_ttf)